# bliz

./: README.md
client/: gulpfile.js  index.html  package-lock.json  package.json
client/css/: main.css
client/js/: all.js
client/js/scripts/: buttons.js
client/scss/: _home.scss  _variables.scss
server/: pyproject.toml
