[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["jotamath <01jmnc@gmail.com>"]
readme = "README.md"
packages = [{include = "server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
